--- a/examples/point_defects/article/article.tex
+++ b/examples/point_defects/article/article.tex
@@ -61,7 +61,7 @@ described mathematically by the chemical rate balance equations given in followi
   \begin{aligned}
     &\frac{dC_i}{dt} = K_0 - K_{iv}C_iC_v - K_{is}C_iC_s + \nabla\cdot D_i\nabla C_i\\
     &\frac{dC_v}{dt} = (1+b)K_0 - K_{iv}C_iC_v - K_{vs}C_vC_s + \nabla\cdot D_v\nabla C_v\\
-  \end{aligned}}
+  \end{aligned}
   \label{equation:point_defect_equations}
 \end{equation}\\
 
@@ -73,14 +73,14 @@ Another form of point defect equations can be written by using sink strength, \t
   \begin{aligned}
     &k_i^2D_iC_i = K_{is}C_iC_s \\
     &k_v^2D_vC_v = K_{vs}C_vC_s \\
-  \end{aligned}}
+  \end{aligned}
   \label{equation:sink_reaction_term}
 \end{equation}\\
 \begin{equation}
   \begin{aligned}
     &\frac{dC_i}{dt} = K_0 - K_{iv}C_iC_v - k_i^2D_iC_i + \nabla\cdot D_i\nabla C_i\\
     &\frac{dC_v}{dt} = (1+b)K_0 - K_{iv}C_iC_v - k_v^2D_vC_v + \nabla\cdot D_v\nabla C_v\\
-  \end{aligned}}
+  \end{aligned}
   \label{equation:point_defect_equations_sink_strength}
 \end{equation}\\
 
@@ -140,22 +140,22 @@ In reactor environment, materials are exposed to different types of particle rad
   \subsection{Neutron Irradiation} \hspace{10pt}
   Neutrons have an energy spectrum that varies a couple of orders of magnitude. This makes defect generation possible at different energies. Also, the high penetration depth of neutrons allow them to travel through material corresponding to their energies. Thus, they cause a uniform or flat-like defect production profile in material.\cite{was2016}
 
-  Numerical models are frequently used to solve scientific problems and make decisions based on results obtained from simulations, but first, the numerical approach should be reliable. Before presenting results from this study, a simple 1D spherical grain problem for neutron irradation is solved by MOOSE, and its results are compared to analytical results for validation.
+  Numerical models are frequently used to solve scientific problems and make decisions based on results obtained from simulations, but first, the numerical approach should be reliable. Before presenting results from this study, a simple spherical grain problem for neutron irradation is solved by MOOSE, and its results are compared to analytical results for validation.
 
-  In this approach the recombination term in Eq. \ref{equation:point_defect_equations_sink_strength} is neglected, and the steady state analytical solutions for spherical grain of radius \textit{a} are found as below.\cite{heald1977}\\
+  In this approach the mutual recombination term in Eq. \ref{equation:point_defect_equations_sink_strength} is neglected, and the steady state analytical solutions for spherical grain of radius \textit{a} are found as below.\cite{heald1977}\\
 
   \begin{equation}
     \begin{aligned}
       &0 = \frac{K_0}{D_i} - k_i^2C_i + \frac{d^2C_i}{dr^2}+\frac{2}{r}\frac{dC_i}{dr}\\
       &0 = \frac{K_0}{D_v} - k_v^2C_v + \frac{d^2C_v}{dr^2}+\frac{2}{r}\frac{dC_v}{dr}\\
-    \end{aligned}}
+    \end{aligned}
     \label{equation:spherical_norecomb_point_defect_equations}
   \end{equation}\\
   \begin{equation}
     \begin{aligned}
       &C_i(r)=\frac{K_0}{D_ik_i^2}\bigg(1-\frac{a\sinh{k_ir}}{r\sinh{k_ia}}\bigg)\\
       &C_v(r)=\frac{K_0}{D_vk_v^2}\bigg(1-\frac{a\sinh{k_vr}}{r\sinh{k_va}}\bigg)\\
-    \end{aligned}}
+    \end{aligned}
     \label{equation:spherical_grain_analytical_solution}
   \end{equation}\\
 
@@ -163,7 +163,7 @@ In reactor environment, materials are exposed to different types of particle rad
   \begin{figure}[h!]
     \centering
     \includegraphics[scale=0.55]{concentration_profiles_MOOSE_Analytical_Neutron_0}
-    \caption{Comparison of MOOSE results with analytical solution for a 1D spherical grain.}
+    \caption{Comparison of MOOSE results with analytical solution for spherical grain.}
     \label{figure:concentrations_MOOSE_analytical}
   \end{figure}
     \subsubsection{Concentrations} \hspace{10pt}
@@ -208,6 +208,17 @@ In reactor environment, materials are exposed to different types of particle rad
 
     \newpage
     \subsubsection{Supersaturation} \hspace{10pt}
+    Supersaturation is a condition that the actual concentration of point defect is larger than its equilibrium concentration. The opposite condition is called undersaturation which is being smaller than equilibrium concentration. In both cases, the system is not at the minimum free energy. Both vacancies and interstitials could be supersaturated, then aggiomerate into voids or discs of interstitial atoms. These can produce stacking faults in crystal microstructure.
+
+    The effective vacancy supersaturation, ${S_v}$ is calculated by using following equation,\cite{was2016}\\
+
+    \begin{equation}
+      \begin{aligned}
+        &S_v=\frac{D_vC_v-D_iC_i}{D_vC_v^e}\\
+      \end{aligned}
+    \end{equation}\\
+
+    The vacancy supersaturation curves for biased neutron irradation is given in Fig. \ref{figure:vacancy_supersaturation_neutron_5}. Since the defect concentrations are symmetrical for neutron irradation, supersaturation curves are also symmetrical around domain center. The plot shows a non-linear increase in supersaturation values as domain gets larger.
       \begin{figure}[h!]  %Nuetron - Vacancy Supersaturation - 5% Bias
         \centering
         \subfloat{\includegraphics[scale=0.55]{super_saturation_500-5000nm-neutron-5}}
@@ -217,36 +228,87 @@ In reactor environment, materials are exposed to different types of particle rad
         \label{figure:vacancy_supersaturation_neutron_5}
       \end{figure}
 
-    \newpage
     \subsubsection{Sink Strengths} \hspace{10pt}
-    The grain boundary sink strengths are calculated by using the equation \ref{equation:sink_strength}.
-      \begin{figure}[h!]  %Sink Strength - Neutron 1e-6 dpa/s - 0% Bias rate
-        \centering
-        \subfloat{\includegraphics[scale=0.55]{sink_strength_moose_neutron_0_k}}
-        \qquad
-        \subfloat{\includegraphics[scale=0.55]{sink_strength_moose_neutron_0_Z}}
-        \caption{Sink Strengths for low dose rate neutron irradiation with 0\% Production Bias}
-        \label{figure:sink_strengths_neutron_0_1e-6}
-      \end{figure}
+    The sink reaction term in Eq. \ref{equation:point_defect_equations_sink_strength} represents the total loss of point defects to sinks that are voids and dislocations within the domain. It can be written in expanded form as below,
+
+    \begin{equation}
+      \begin{aligned}
+        &k^2DC=(Z\rho_d+4\pi r_h\rho_h)DC\\
+      \end{aligned}
+    \end{equation}\\
+    Similarly, grain boundary sink strength can be calculated by considering total flow of point defect to grain boundary.
+
+    \begin{equation}
+      \begin{aligned}
+        &F=Z_{gb}DC_0\\
+      \end{aligned}
+    \end{equation}
+
+    where ${F}$ is total flow at grain boundary, ${Z_{gb}}$ is grain boundary sink strength, ${D}$ is diffusion coefficient and ${C_0}$ is defect concentration at the domain center.\\\\
+    So that the grain boundary sink strength is
+
+    \begin{equation}
+      \begin{aligned}
+        &Z_{gb}=\frac{F}{DC_0}\\
+      \end{aligned}
+    \end{equation}\\
+    The total flow, ${F}$ is equal to current multiplied by surface area at grain boundary. ${F}$ and ${C_0}$ can be taken from directly MOOSE simulation results. The total grain boundary sink strength, ${k^2_{gb}}$ is calculated by multiplying ${Z_{gb}}$ by the grain density, ${\rho_{gb}}$.\cite{heald1977}
+
+    \begin{equation}
+      \begin{aligned}
+        &\rho_{gb}=\frac{6}{\pi d^3}\\
+        &k^2_{gb}=\rho_{gb}Z_{gb}\\
+      \end{aligned}
+    \end{equation}
+
+    where ${d}$ is diameter of the grain, ${d=2a}$\\\\
+    Grain boundary sink strength, ${Z_{gb}}$ can also be calculated analytically by using Eq. \ref{equation:spherical_grain_analytical_solution} to find ${F}$ and ${C_0}$. This solution helps to associate the grain boundary sink strength with the domain sink strength, ${k^2}$. \cite{heald1977}\\
+
+    \begin{equation}
+      \begin{aligned}
+        &F=-\bigg(4\pi r^2D\frac{\partial C(r)}{\partial r}\bigg)_{r=a}\\
+        &C_0=C(r=0)\\
+        &Z_{gb}=4\pi a\bigg(\frac{ka\cosh ka-\sinh ka}{\sinh ka-ka}\bigg)\\
+        &\rho_{gb}=\frac{6}{\pi d^3}\\
+        &k^2_{gb}=\frac{12}{d^2}\bigg(\frac{ka\cosh ka-\sinh ka}{\sinh ka-ka}\bigg)\\
+      \end{aligned}
+    \end{equation}\\
+
+    Sink strengths are calculated based on MOOSE simulation results and presented in Fig. \ref{figure:sink_strengths_neutron_5_1e-6} and \ref{figure:sink_strengths_ion_5_1e-3}. The effect of flipping behavior is not visible in grain boundary sink strength, ${Z^{gb}}$ plot, but in total grain boundary sink strength, ${k^2}$ plot, there is a significant change on trend of ${k^2_i}$ line after critical domain size of ${\sim}$1000 nm. In high dose rate plot, the critical domain size is seen clearly around at ${\sim}$250 nm.
+      % \begin{figure}[h!]  %Sink Strength - Neutron 1e-6 dpa/s - 0% Bias rate
+      %   \centering
+      %   \subfloat{\includegraphics[scale=0.55]{sink_strength_moose_neutron_0_k}}
+      %   \qquad
+      %   \subfloat{\includegraphics[scale=0.55]{sink_strength_moose_neutron_0_Z}}
+      %   \caption{Sink Strengths for low dose rate neutron irradiation with 0\% Production Bias}
+      %   \label{figure:sink_strengths_neutron_0_1e-6}
+      % \end{figure}
       \begin{figure}[h!]  %Sink Strength - Neutron 1e-6 dpa/s - 5% Bias rate
         \centering
-        \subfloat{\includegraphics[scale=0.55]{sink_strength_moose_neutron_5_k}}
+        \subfloat{\includegraphics[scale=0.55]{sink_strength_moose_neutron_5_Z_scaled}}
         \qquad
-        \subfloat{\includegraphics[scale=0.55]{sink_strength_moose_neutron_5_Z}}
+        \subfloat{\includegraphics[scale=0.55]{sink_strength_moose_neutron_5_k_scaled}}
         \caption{Sink Strengths for low dose rate neutron irradation with 5\% Production Bias}
         \label{figure:sink_strengths_neutron_5_1e-6}
       \end{figure}
-
+      \begin{figure}[h!]  %Sink Strength - Neutron 1e-6 dpa/s - 5% Bias rate
+        \centering
+        \subfloat{\includegraphics[scale=0.55]{sink_strength_moose_high_neutron_5_Z_scaled}}
+        \qquad
+        \subfloat{\includegraphics[scale=0.55]{sink_strength_moose_high_neutron_5_k_scaled}}
+        \caption{Sink Strengths for high dose rate neutron irradation with 5\% Production Bias}
+        \label{figure:sink_strengths_neutron_5_1e-3}
+      \end{figure}
+  \newpage
   \subsection{Ion Irradiation} \hspace{10pt}
   Unlike neutrons, ions have relatively narrow energy channel width which is almost monoenergetic. Furthermore, they cannot penetrate through material too much because of their high energy loss in collisions. These characteristic causes a non-uniform defect production profile. The defect production profile used for ion irradation simulations are shown in Fig. \ref{figure:defect_production}. The dose rate, K\textsubscript{0} and domain size (1000 nm) would be scaled for different cases, but the profile is going to stay unchanged.
     \begin{figure}[h!]  %Ion irradation
       \centering
-      \subfloat{\includegraphics[scale=0.3]{defect_production}}
+      \subfloat{\includegraphics[scale=0.27]{defect_production}}
       \qquad
       \caption{Defect production profile for ion irradation.}
       \label{figure:defect_production}
     \end{figure}
-    \newpage
     \subsubsection{Concentrations} \hspace{10pt}
     The effect of defect production distribution is the first thing that can be observed easily on concentration profiles. Since, all defect production profiles having peak at around half of the domain, the concentration profiles are also showing the same behavior and reaching maximum at the center of domain, then waning through boundaries.
 
@@ -287,7 +349,9 @@ In reactor environment, materials are exposed to different types of particle rad
       \end{figure}
 
     \newpage
-    \subsubsection{Supersaturation}
+    \subsubsection{Supersaturation} \hspace{10pt}
+
+    The vacancy supersaturation curves for ion irradation case are quite similar to ones for neutron irradation case. The only difference is the asymmetrical shape of curves originates from concentration profiles. The non-linear increase in supersaturation values as domain gets larger is observed for ion irradation too.
       \begin{figure}[h!]  %Ion - %5 Bias rate
         \centering
         \subfloat{\includegraphics[scale=0.55]{super_saturation_500-5000nm-ion-5}}
@@ -296,24 +360,31 @@ In reactor environment, materials are exposed to different types of particle rad
         \caption{Vacancy Supersaturation profiles for low dose and ion irradation with 5\% Production Bias}
         \label{figure:vacancy_supersaturation_ion_5}
       \end{figure}
-
-    \newpage
-    \subsubsection{Sink Strengths}
-      \begin{figure}[h!]  %Sink Strength - ion 1e-3 dpa/s - 0% Bias rate
+    \subsubsection{Sink Strengths} \hspace{10pt}
+    The sink strengths are directly related to concentration at center and flow at boundary. The change in centerline defect concentrations are not as considerable as neutron case. So, the flow or flux at boundary becomes more dominant on sink strength profiles.
+      % \begin{figure}[h!]  %Sink Strength - ion 1e-3 dpa/s - 0% Bias rate
+      %   \centering
+      %   \subfloat{\includegraphics[scale=0.55]{sink_strength_moose_ion_0_k}}
+      %   \qquad
+      %   \subfloat{\includegraphics[scale=0.55]{sink_strength_moose_ion_0_Z}}
+      %   \caption{Sink Strengths for low dose ion irradation with 0\% Production Bias}
+      %   \label{figure:sink_strengths_ion_0_1e-6}
+      % \end{figure}
+      \begin{figure}[h!]  %Sink Strength - ion 1e-6 dpa/s - 5% Bias rate
         \centering
-        \subfloat{\includegraphics[scale=0.55]{sink_strength_moose_ion_0_k}}
+        \subfloat{\includegraphics[scale=0.55]{sink_strength_moose_low_ion_5_Z_scaled}}
         \qquad
-        \subfloat{\includegraphics[scale=0.55]{sink_strength_moose_ion_0_Z}}
-        \caption{Sink Strengths for low dose ion irradation with 0\% Production Bias}
-        \label{figure:sink_strengths_ion_0_1e-6}
+        \subfloat{\includegraphics[scale=0.55]{sink_strength_moose_low_ion_5_k_scaled}}
+        \caption{Sink Strengths for low dose rate ion irradiation with 5\% Production Bias}
+        \label{figure:sink_strengths_ion_5_1e-6}
       \end{figure}
       \begin{figure}[h!]  %Sink Strength - ion 1e-3 dpa/s - 5% Bias rate
         \centering
-        \subfloat{\includegraphics[scale=0.55]{sink_strength_moose_ion_5_k}}
+        \subfloat{\includegraphics[scale=0.55]{sink_strength_moose_ion_5_Z_scaled}}
         \qquad
-        \subfloat{\includegraphics[scale=0.55]{sink_strength_moose_ion_5_Z}}
+        \subfloat{\includegraphics[scale=0.55]{sink_strength_moose_ion_5_k_scaled}}
         \caption{Sink Strengths for high dose rate ion irradiation with 5\% Production Bias}
-        \label{figure:sink_strengths_ion_5_1e-6}
+        \label{figure:sink_strengths_ion_5_1e-3}
       \end{figure}
 
 
@@ -349,6 +420,7 @@ In reactor environment, materials are exposed to different types of particle rad
 % Based on this, if the production rate increased sufficiently, the recombination zone would
 % appear again in nano-scale domain.
 
+\newpage
 \section{Conclusion} \hspace{10pt}
 
 The rate theory equations resolve the temporal and spatial concentration profiles of point defects. The behavior of concentration distributions are controlled by parameters given in equation, representing their reactions and diffusion in domain. According to the results obtained in this study, the combination of production bias, production dose rate, production profile and domain size determine whether the steady state point defect concentration profile is symmetrical, flipped or both. There is always a critical value for parameters that could change the defect concentration profile entirely.
